--- a/wfPanelsSliderFinal memories.html
+++ b/wfPanelsSliderFinal memories.html
@@ -21,7 +21,7 @@ const contDomElement = document.body;
 const titleElement = document.querySelectorAll("h1.title_name_main_memory")[0];
 const titleElementL = document.querySelectorAll(".building_title_info.building_state_title")[0];
 const titleElementR = document.querySelectorAll(".building_title_info.building_city_main_memory")[0];
-const titleElementBar = document.querySelectorAll("img.title_line_main_memory")[0];
+const titleElementBar = document.querySelectorAll(".title_line_main_memory")[0];
 
 var canvasSize = {x: contDomElement.clientWidth, y:contDomElement.clientHeight };
 const textureLoader = new THREE.TextureLoader();
@@ -43,7 +43,7 @@ const fogFar = 10;
 const scene = new THREE.Scene();
 scene.fog = new THREE.Fog( fogColor, fogNear, fogFar );
 // scene.fog = new THREE.FogExp2( 0x202020, 0.1 );
-const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.3, 10000);
+const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.3, 10000);
 const renderer = new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setClearColor(new THREE.Color( clearColor ), 1);
