--- a/wfPanelsSliderFinal memories.html
+++ b/wfPanelsSliderFinal memories.html
@@ -21,7 +21,7 @@ const contDomElement = document.body;
 const titleElement = document.querySelectorAll("h1.title_name_main_memory")[0];
 const titleElementL = document.querySelectorAll(".building_title_info.building_state_title")[0];
 const titleElementR = document.querySelectorAll(".building_title_info.building_city_main_memory")[0];
-const titleElementBar = document.querySelectorAll(".title_line_main_memory")[0];
+const titleElementBar = document.querySelectorAll(".title_line_main_reality")[0];
 
 var canvasSize = {x: contDomElement.clientWidth, y:contDomElement.clientHeight };
 const textureLoader = new THREE.TextureLoader();
